# thesis

./: .flake8  .gitignore  .vulture-ignore  AGENTS.md  COMPLETE_WORK_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY.md  IMPLEMENTATION_PRIORITIES.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_PLAN.md  LATEST_UPDATE.md  MASTER_CHECKLIST.md  QOS_INTEGRATION_PLAN.md  QWEN.md  QWEN_refined.md  QoS-Aware Handover Plan.md  README.md  README_FIRST.md  README_NEW_FILES.md  START_HERE.md  SYSTEM_STATUS.md  THESIS_COMPARISON_PLAN.md  TOPOLOGY_INIT_FIX.md  Table of Contents.md  WORK_COMPLETED_SUMMARY.md  docker-compose.yml  nef_structure.txt  pytest.ini  repo_tools_summary.json  requirements.txt  test_l_shaped_path.json  test_report.md  vulture_whitelist.py  ⚠️_HONEST_ASSESSMENT_AND_RECOMMENDATIONS.md  ✅_ALL_TESTS_PASSING_PLUS_QOS_PLAN.md  ✨_COMPLETE_SUCCESS_SUMMARY.md  🌟_SIX_FEATURES_COMPLETE.md  🎉_ALL_CRITICAL_ITEMS_COMPLETE.md  🎊_FIVE_FEATURES_COMPLETE.md  (+8 more)
5g-network-optimization/services/ml-service/: .dockerignore  Dockerfile  README.md  __init__.py  app.py  collect_training_data.py  pyproject.toml  requirements.txt  run_ml_service.sh  setup.py
5g-network-optimization/services/ml-service/app/: __init__.py
5g-network-optimization/services/ml-service/app/api/: __init__.py  routes.py  visualization.py
5g-network-optimization/services/ml-service/app/clients/: nef_client.py
5g-network-optimization/services/ml-service/app/data/: nef_collector.py
5g-network-optimization/services/ml-service/docs/: feature_transformations.md
5g-network-optimization/services/ml-service/examples/: dependency_injection_example.py
5g-network-optimization/services/ml-service/ml_service/: __init__.py
5g-network-optimization/services/ml-service/output/: test_model.joblib.meta.json  test_model.joblib.scaler
5g-network-optimization/services/ml-service/tests/: conftest.py  test_antenna_selector.py  test_app_teardown.py  test_async_model_operations.py  test_dependency_injection.py  test_ensemble_selector.py  test_entrypoints.py  test_error_handlers.py  test_feature_pipeline.py  test_feature_store_utils.py  test_feedback_buffer.py  test_helpers.py  test_input_sanitization.py  test_install_deps_script.py  test_lightgbm_selector.py  test_lstm_selector.py  test_memory_optimization.py  test_metrics.py  test_metrics_auth.py  test_ml_components.py  test_mobility_metrics.py  test_model.py  test_model_init.py  test_nef_client.py  test_nef_collector.py  test_online_model.py  test_pingpong_prevention.py  test_plotter.py  test_resource_manager.py  test_routes.py  test_runtime_config.py  test_scaler_consistency.py  test_state_management.py  test_synthetic_data.py  test_tuning.py  test_visualization.py
ml-af/: DOCKERFILE  main.py  pyproject.toml
(+717 files in other folders)
