[tool.poetry]
name = "ml-af"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    "Panagiotis Vasilakis <panagiwtisvassilakis@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = "^0.34.0"
scikit-learn = "^1.6.1"
xgboost = "^3.0.0"
pandas = "^2.2.3"
numpy = "^2.2.4,<3.0.0"
requests = "^2.32.3,<3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"