[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <4"
uvicorn = "^0.17.6"
pymongo = "^4.1.0"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
emails = "^0.6"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.8.5"
sqlalchemy = "^1.3.16"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
aiofiles = "^0.6.0"
evolved5g = "^1.0.0"
pyOpenSSL = "22.1.0" 
scikit-learn = "1.5.2"
hyperopt = "^0.2.7"
markdown2 = "^2.4.3"
Jinja2 = "^3.1.2"
weasyprint = "^54.3"
Markdown = "^3.3.7"
umap-learn = "^0.5.3"
lightgbm = "3.1.1"
flask = "^2.0.0"
werkzeug = "^2.2.3"
matplotlib = "3.5.2"
seaborn = "0.13.2"
joblib = "1.2.0"
pytest = "6.2.4"
fastapi = "0.95"
pandas = "2.2.3"
numpy = "^1.19.5"
tenacity = "^6.3.1"
tables = "^3.7.0"
requests = "^2.25.1"
pydantic = "^1.7.3"
pyyaml = ">=5.3.1, !=5.4.0, !=5.4.1, !=6.0.0"
click = "8.0.1"
grpcio = "^1.38.1"
grpcio-tools = "^1.38.1"
python-dotenv = "^0.19.1"
aiohttp = "^3.8.1"
asyncio-throttle = "^1.0.2"
pyarrow = "14.0.2"
google-api-core = "^2.19.1"
google-cloud-storage = "^2.17.0"
google-auth = "^2.31.0"
google-cloud-core = "^2.4.1"
google-cloud-secret-manager = "^2.20.0"
mypy = "0.910"
black = "21.12b0"
isort = "^5.13.2"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

